@@ -1,5 +1,11 @@
 2008-03-31  Dan Williams  <dcbw@redhat.com>
 
+	* src/vpn-connection-info.c
+	  src/vpn-connection-info.h
+		- remove, unused
+
+2008-03-31  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-device-wireless.c
 		- (wireless_device_state_changed, wireless_get_icon): notification
 			serivce needs UTF-8 safe strings since they get sent to the
